Improve memory usage of shader packs with complex block.properties files